# iburtea_id_card_detector

./: main.py  project_pipeline.txt  pyproject.toml  utlis.py
